@@ -86,6 +86,7 @@
 - SecureCRT MasterPassphrase v2: update module, pure kernels and test unit. Add optimized kernels.
 - Metal Backend: added workaround to prevent 'Infinite Loop' bug when build kernels
 - User Options: added --metal-compiler-runtime option
+- Hardware Monitor: avoid sprintf in src/ext_iokit.c
 
 * changes v6.2.5 -> v6.2.6
 
